# Data-Gen-AI

./: .gitignore  README.md  Readme.md  package-lock.json  package.json  render.yaml  resolutions.json
backend/: .env  .env.example  .gitignore  build.sh  pyproject.toml  requirements.txt
backend/app/: address_service.py  assignment_logic.py  google_service.py  gpt_service.py  llm_service.py  main.py  pattern_detector.py
backend/app/policies/: __init__.py  base.py  generic.py  im.py  ims.py  pap_quincy.py  rrg.py  spg_auto.py  spg_pl.py  spg_wh.py
backend/app/rulebook/: __init__.py  conditions.py  config.py  engine.py  geo.py  l0_base.py  primitives.py  profile_ims.py  profile_rrg.py  profiles.py  rules.py  scenario.py  variety.py
backend/tests/: conftest.py  test_download_sanitize.py  test_llm_count.py
backend/tests/policies/: test_cargo_apd_defects.py  test_dw_defects.py  test_ho_defects.py  test_im_defects.py  test_new_template_defects.py  test_spg_pl_helpers.py
backend/tests/rulebook/: test_end_to_end.py  test_engine.py  test_ims_parity.py  test_l0_base.py  test_primitives.py  test_profiles.py  test_rrg_parity.py  test_rules.py  test_scenario.py  test_scenario_counts.py  test_variety.py
frontend/: .env.example  .env.production  .gitignore  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/rules/: AnalysisProgress.tsx  RuleCard.tsx  RuleSetPanel.tsx
frontend/src/components/ui/: input.tsx  (+2 more)
frontend/src/config/: api.ts
frontend/src/types/: index.ts
(+1 files in other folders)
