[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "openai>=1.68.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
